asg/tests/fail/array/input_nested_3x2_fail.leo
function main(a: [u8; (3, 2)]) {
    console.assert(a == [[0u8; 2]; 3)]); // This should be written the right way as this test is for the input file.
}
